# 2023GraduationResearch

./: 2023GraduationResearch.code-workspace  CMakeLists.txt
LearnFFT/: LearnFFT.code-workspace
LearnFFT/include/: DFT.h  FFT.h  Utility.h
LearnFFT/src/: FFT.c
LearnFFT/test/: testDFT.c
QD/: CMakeLists.txt  QD.code-workspace
QD-FFT/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  QD-FFT.code-workspace
QD-FFT-OMP/: CMakeLists.txt  QD-FFT.code-workspace
QD-FFT-OMP-GPU/: CMakeLists.txt  QD-FFT-OMP-GPU.code-workspace  cmake-variants.yaml
QD-FFT-OMP-GPU/batch/: Sixstep2Time24.sh  Sixstep2Time24.sh.e92062  Sixstep2Time24.sh.e92067  Sixstep2Time24.sh.e92441  Sixstep2Time24.sh.e92442  Sixstep2Time24.sh.o92067  Sixstep2Time24.sh.o92441  Sixstep2Time24.sh.o92442  Sixstep2Time32.sh  Sixstep2Time32.sh.e92444  Sixstep2Time32.sh.o92444  SixstepGPUTime32.sh  SixstepGPUTime32.sh.e96856  SixstepGPUTime32.sh.e96857  SixstepGPUTime32.sh.e96889  SixstepGPUTime32.sh.e96890  SixstepGPUTime32.sh.e97659  SixstepGPUTime32.sh.e97752  SixstepGPUTime32.sh.o96857  SixstepGPUTime32.sh.o96890  SixstepGPUTime32.sh.o97752  SixstepOMPTime32.sh  SixstepOMPTime32.sh.e145200  SixstepOMPTime32.sh.e145222  SixstepOMPTime32.sh.e96862  SixstepOMPTime32.sh.e97635  SixstepOMPTime32.sh.e97740  SixstepOMPTime32.sh.e98450  SixstepOMPTime32.sh.e98898  SixstepOMPTime32.sh.o145200  SixstepOMPTime32.sh.o145222  SixstepOMPTime32.sh.o96862  SixstepOMPTime32.sh.o97740  SixstepOMPTime32.sh.o98450  SixstepOMPTime32.sh.o98898  SixstepTime30.sh  SixstepTime30.sh.e76829  SixstepTime30.sh.e83301  SixstepTime30.sh.e87024  SixstepTime30.sh.e87025  (+89 more)
QD-FFT-OMP-GPU/bench/: CMakeLists.txt  Timer.hpp  arg.hpp  bench_util.hpp  cos_table_error_test.cpp  cos_table_gpu_error_test.cpp  cos_table_test.cpp  dif_error_test.cpp  dif_test.cpp  omp_test.cpp  sixstep2_error_test.cpp  sixstep2_time.cpp  sixstep_error_test.cpp  sixstep_gpu_error_test.cpp  sixstep_gpu_time.cpp  sixstep_omp_error_test.cpp  sixstep_omp_time.cpp  sixstep_time.cpp  stockham_error_test.cpp  stockham_gpu_benchFFT_speed.cpp  stockham_gpu_error_test.cpp  stockham_gpu_n4_complex_error_test.cpp  stockham_gpu_n4_complex_time.cpp  stockham_gpu_n4_error_test.cpp  stockham_gpu_n4_time.cpp  stockham_gpu_time.cpp  stockham_omp_benchFFT_speed.cpp  stockham_omp_error_test.cpp  stockham_omp_time.cpp  stockham_test.cpp  stockham_time.cpp
QD-FFT-OMP-GPU/bench_util/: Arg.hpp  Timer.hpp  bench_util.hpp
QD-FFT-OMP-GPU/fft/: butterfly.hpp  dif.hpp  fft.hpp  fft_util.hpp  make_cos_table.hpp  make_cos_table_gpu.hpp  qd_fft.hpp  sixstep.hpp  sixstep_gpu.hpp  sixstep_omp.hpp  stockham.hpp  stockham_gpu.hpp  stockham_gpu_n4.hpp  stockham_gpu_n4_complex.hpp  stockham_omp.hpp
QD-FFT-OMP-GPU/qd/: qd.hpp  qd_base.hpp  qd_init.hpp  qd_random.hpp  qd_sqrt.hpp  qd_type.hpp  qd_util.hpp  qd_vector.hpp
QD-FFT-OMP/batch/: SixstepTime.sh  SixstepTime.sh.e76826  SixstepTime.sh.e76827  SixstepTime.sh.e91947  SixstepTime.sh.e92066  SixstepTime.sh.e92445  SixstepTime.sh.e92447  SixstepTime.sh.o76826  SixstepTime.sh.o76827  SixstepTime.sh.o91947  SixstepTime.sh.o92066  SixstepTime.sh.o92445  SixstepTime.sh.o92447  StockhamTime16_16.sh  StockhamTime16_16.sh.e74546  StockhamTime16_16.sh.o74546  StockhamTime16_2.sh  StockhamTime16_32.sh  StockhamTime16_32.sh.e74547  StockhamTime16_32.sh.e87031  StockhamTime16_32.sh.e87032  StockhamTime16_32.sh.o74547  StockhamTime16_32.sh.o87031  StockhamTime16_32.sh.o87032  StockhamTime16_4.sh  StockhamTime16_48.sh  StockhamTime16_48.sh.e74548  StockhamTime16_48.sh.e87027  StockhamTime16_48.sh.o74548  StockhamTime16_48.sh.o87027  StockhamTime16_8.sh  StockhamTime16_96.sh  StockhamTime16_96.sh.e74549  StockhamTime16_96.sh.e87026  StockhamTime16_96.sh.o74549  StockhamTime16_96.sh.o87026
QD-FFT-OMP/bench/: CMakeLists.txt  Timer.hpp  bench_util.hpp  cos_table_test.cpp  sixstep_test.cpp  sixstep_time.cpp  stockham_time.cpp
QD-FFT-OMP/fft/: fft.hpp  fft_util.hpp  make_cos_table.hpp  qd_fft.hpp
QD-FFT-OMP/qd/: qd_base.hpp  qd_io.hpp
QD-FFT/batch/: StockhamTime19.sh  StockhamTime19.sh.e74540  StockhamTime19.sh.e74543  StockhamTime19.sh.o74540  StockhamTime19.sh.o74543
QD-FFT/batchs/: DoubleFFTTime.sh  DoubleFFTTime.sh.e169623  DoubleFFTTime.sh.o169623_20230809  QDFFTPrecisionTest.sh  QDFFTPrecisionTest.sh.e169631  QDFFTPrecisionTest.sh.e169632  QDFFTPrecisionTest.sh.o169631_20230809  QDFFTPrecisionTest.sh.o169632_20230809_SLOPPY_MUL  QDFFTTime.sh  QDFFTTime.sh.e169621  QDFFTTime.sh.e169625_20230809_SLOPPY_MUL  QDFFTTime.sh.o169621_20230809  QDFFTTime.sh.o169625_20230809_SLOPPY_MUL
QD-FFT/bench/: CMakeLists.txt  bench_util.hpp  cos_table_test.cpp  dif_test.cpp  stockham_error_test.cpp  stockham_test.cpp  stockham_time.cpp
QD-FFT/fft/: make_cos_table.hpp  qd_fft.hpp
QD-FFT/include/: fft.hpp  qd.hpp  util_calc.hpp  util_io.hpp
QD-FFT/qd/: common.hpp  qd.hpp  qd_base.hpp  qd_init.hpp  qd_random.hpp  qd_sqrt.hpp  qd_util.hpp
QD-FFT/src/: CMakeLists.txt  fft.cpp  qd.cpp  qd_io.cpp  qd_util.cpp  util_calc.cpp  util_io.cpp
QD-FFT/test/: CMakeLists.txt  fft_answer_test.cpp  fft_test.cpp  fft_time.cpp  qd_fft_profile.cpp
QD-FFT_OLD/: .clang-format  .gitignore  CMakeLists.txt
QD-FFT_OLD/.devcontainer/: devcontainer.json
QD-FFT_OLD/batchs/: QDFFTTime.sh
QD-FFT_OLD/include/: fft.hpp  qd.hpp  util_calc.hpp
QD-FFT_OLD/src/: CMakeLists.txt  fft.cpp  qd.cpp  qd_io.cpp  qd_util.cpp  util_calc.cpp  util_io.cpp
QD-FFT_OLD/test/: CMakeLists.txt  double_fft_time.cpp  fft_test.cpp  qd_fft_error_bits.cpp  qd_fft_precision_test.cpp  qd_fft_profile.cpp  qd_fft_test.cpp  qd_fft_time.cpp
QD/include/: qd.hpp  util.hpp  utility.hpp
QD/src/: CMakeLists.txt  qd.cpp  qd_operator.cpp  util.cpp  utility.cpp
QD/test/: CMakeLists.txt  makeCosConst.cpp  precisionTest.cpp  qdTest.cpp  utilTest.cpp  utilityTest.cpp
include/: DFT.h  FFT.h  Utility.h
src/: CMakeLists.txt  DFT.c  FFT.c  Utility.c
test/: CMakeLists.txt  a.out  testDFT.c  testFFT.c  testUtility.c
