add_executable(CosTableErrorTest cos_table_error_test.cpp)

add_executable(DIFErrorTest dif_error_test.cpp)

add_executable(StockhamErrorTest stockham_error_test.cpp)
add_executable(StockhamTime stockham_time.cpp)

# add_executable(StockhamOMPErrorTest stockham_omp_error_test.cpp)
add_executable(StockhamOMPTime stockham_omp_time.cpp)

add_executable(StockhamGPUTime stockham_gpu_time.cpp)
add_executable(StockhamGPUErrorTest stockham_gpu_error_test.cpp)

add_executable(SixstepErrorTest sixstep_error_test.cpp)
add_executable(SixstepTime sixstep_time.cpp)

add_executable(SixstepOMPErrorTest sixstep_omp_error_test.cpp)
add_executable(SixstepOMPTime sixstep_omp_time.cpp)

add_executable(SixstepGPUErrorTest sixstep_gpu_error_test.cpp)
add_executable(SixstepGPUTime sixstep_gpu_time.cpp)

